@@ -2,7 +2,10 @@ TAG: qcreports_db-6-0-27-?
 DATE: 02/02/2026
 STAFF: lec
 wts2-1795/sprt-208/GXD Index Custom reports small issue
+wts2-1794/sprt-209/Custom report for creative commons use
         modified:   GXD_IndexOverview.py
+	new file:   GXD_ImageNeedCreativeCommons.py
+        modified:   pwireports.txt
 
 TAG: qcreports_db-6-0-27-1
 DATE: 01/15/2026
